--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -16,13 +16,39 @@
                         <input type='text' formControlName="name" />
                     </li>
                 </form>
-                <!-- <li>name : {{currentDetail()?.name}}</li> -->
-                <h3>出沒龍種</h3>
-                <div *ngFor="let toDragon of (currentDetail()?._toDragonMap | mapToArray) ">
-                    <li>
-                        <button (click)="goToDetail('dragon', toDragon._dragon.id)">詳</button>
-                        {{toDragon._dragon.name}}
-                    </li>
+                <div class="container">
+                    <ul>
+                        <div class="list">
+                            <h3>出沒龍種 pure pipe</h3>
+                            <li *ngFor="let toDragon of (currentDetail()?._toDragonMap | mapToArrayPure) ">
+                                <button (click)="goToDetail('dragon', toDragon._dragon.id)">詳</button>
+                                {{toDragon?._dragon?.name}}
+                                <button (click)="deleteRelation('dragonArea',toDragon.id)">刪除關係</button>
+                            </li>
+                        </div>
+                    </ul>
+
+                    <ul>
+                        <div class="list">
+                            <h3>出沒龍種 not pure pipe</h3>
+                            <li *ngFor="let toDragon of (currentDetail()?._toDragonMap | mapToArray) ">
+                                <button (click)="goToDetail('dragon', toDragon._dragon.id)">詳</button>
+                                {{toDragon?._dragon?.name}}
+                                <button (click)="deleteRelation('dragonArea',toDragon.id)">刪除關係</button>
+                            </li>
+                        </div>
+                    </ul>
+
+                    <ul>
+                        <div class="list">
+                            <h3>出沒龍種 signal</h3>
+                            <li *ngFor="let toDragon of sublayerDragonVM() ">
+                                <button (click)="goToDetail('dragon', toDragon._dragon.id)">詳</button>
+                                {{toDragon?._dragon?.name}}
+                                <button (click)="deleteRelation('dragonArea',toDragon.id)">刪除關係</button>
+                            </li>
+                        </div>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -43,6 +69,7 @@
                     <label *ngIf="toDragon.isWeek" style="color: blue;">弱屬</label>
                     <label *ngIf="!toDragon.isWeek" style="color: red;">攻屬</label>
                     {{toDragon._dragon.name}}
+                    <button (click)="deleteRelation('dragonProperty',toDragon.id)">刪除關係</button>
                 </li>
             </div>
         </div>
@@ -61,14 +88,16 @@
                     <button (click)="goToDetail('property', toProperty._property.id)">詳</button>
                     <label *ngIf="toProperty.isWeek" style="color: blue;">弱屬</label>
                     <label *ngIf="!toProperty.isWeek" style="color: red;">攻屬</label>
-                    {{toProperty._property.name}}
+                    {{toProperty?._property?.name}}
+                    <button (click)="deleteRelation('dragonProperty',toProperty.id)">刪除關係</button>
                 </li>
             </div>
             <h3>出沒地帶</h3>
             <div *ngFor="let toArea of (currentDetail()?._toAreaMap | mapToArray) ">
                 <li>
                     <button (click)="goToDetail('area', toArea._area.id)">詳</button>
-                    {{toArea._area.name}}
+                    {{toArea?._area?.name}}
+                    <button (click)="deleteRelation('dragonArea',toArea.id)">刪除關係</button>
                 </li>
             </div>
 
@@ -77,6 +106,7 @@
             <p>This is the default case.</p>
         </div>
     </div>
+
     <button (click)="save()" [disabled]="baseEditForm.invalid">儲存</button>
     <button (click)="back()">取消</button>
 </div>
