--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -2,6 +2,7 @@
 <p>list works!</p>
 <!-- <button (click)="test()">test</button><br /> -->
 <button *ngFor="let page of pageList" (click)="setPage(page)"> {{page}}</button>
+<input type="text" (input)="updateInput($event)">
 <br />--------------------------------<br />
 <div [ngSwitch]="currentPage">
     <div *ngSwitchCase="'area'">
@@ -9,18 +10,42 @@
             <button (click)="goToDetail(area.id)">詳</button>
             {{ area.name }}
         </li>
+
+        <div>
+            after Search
+            <li *ngFor="let data of areaAfterSearch()">
+                <button (click)="goToDetail(data.id)">詳</button>
+                {{ data.name }}
+            </li>
+        </div>
     </div>
     <div *ngSwitchCase="'property'">
         <li *ngFor="let property of propertyList()">
             <button (click)="goToDetail(property.id)">詳</button>
             {{ property.name }}
         </li>
+
+        <div>
+            after Search
+            <li *ngFor="let data of propertyAfterSearch()">
+                <button (click)="goToDetail(data.id)">詳</button>
+                {{ data.name }}
+            </li>
+        </div>
     </div>
     <div *ngSwitchCase="'dragon'">
         <li *ngFor="let dragon of dragonList()">
             <button (click)="goToDetail(dragon.id)">詳</button>
             {{ dragon.name }}
         </li>
+        <div>
+            after search
+            <li *ngFor="let data of dragonAfterSearch()">
+                <button (click)="goToDetail(data.id)">詳</button>
+                {{ data.name }}
+            </li>
+        </div>
+
     </div>
     <div *ngSwitchDefault>
         <p>This is the default case.</p>
