--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,2 +1,5 @@
 <p>homepage works!</p>
 <a routerLink="/list">List</a>
+<br />
+<a routerLink="/equipage">equipage search</a><br />
+<a routerLink="/car">car</a><br />
